<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RunFish</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter">ENTER</string>
    <string name="run">RUN</string>
    <string name="fish">FISH</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="todo">TODO</string>
    <string name="email_text">Email</string>
    <string name="password_value">Password</string>
    <string name="sign_in_value">Sign in</string>
    <string name="username_text">Username</string>
    <string name="corda1">corda1</string>
    <string name="corda2">corda2</string>
    <string name="description_image_google">Google logo</string>
    <string name="description_user_image">User image</string>
    <string name="singleplayer">SINGLEPLAYER</string>
    <string name="resume">RESUME</string>
    <string name="levels">LEVELS</string>
    <string name="freemode">FREE MODE</string>
    <string name="description_image_corda">Imatge corda</string>
    <string name="description_image_singleplayer">Imatge tabla singleplayer</string>
    <string name="Tutorial">TUTORIAL</string>
    <string name="level1">LEVEL 1</string>
    <string name="level2">LEVEL 2</string>
    <string name="level3">LEVEL 3</string>
    <string name="level4">LEVEL 4</string>
    <string name="level5">LEVEL 5</string>
    <string name="level6">LEVEL 6</string>
    <string name="level7">LEVEL 7</string>
    <string name="level8">LEVEL 8</string>
    <string name="level9">LEVEL 9</string>
    <string name="level10">LEVEL 10</string>
    <string name="menu">MENU</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="shop">SHOP</string>
    <string name="stats">STATS</string>
    <string name="options">OPTIONS</string>
    <string name="users_ini">3</string>
    <string name="invite">INVITE</string>
    <string name="music">MUSIC</string>
    <string name="sounds">SOUNDS</string>
    <string name="vibracion">VIBRATION</string>
    <string name="language">LANGUAGE</string>
    <string name="description_image_cross">Cross image</string>
    <string name="total_fish">TOTAL FISH:</string>
    <string name="plankton_collected">PLANKTON COLLECTED:</string>
    <string name="number_of_deaths">NUMBER OF DEATHS:</string>
    <string name="murdered_fish">MURDERED FISH:</string>
    <string name="max_distance_traveled">MAX DISTANCE TRAVELED:</string>
    <string name="number_zero">0</string>
    <string name="go">GO!</string>
    <string name="image_player2">Image Player2</string>
    <string name="player_2">Player 2</string>
    <string name="player_1">Player 1</string>
    <string name="preu_common_fish">500</string>
    <string name="common_fish">COMMON FISH</string>
    <string name="description_image_plankton">Plankton image</string>
    <string name="description_image_fish">Fish image</string>
    <string name="capacity">CAPACITY</string>
    <string name="life">LIFE</string>
    <string name="speed">SPEED</string>
    <string name="meters">85 METERS</string>
    <string name="description_image_shark">shark</string>
    <string name="description_image_mina">mina</string>
    <string name="description_image_joystick">joystick</string>
    <string name="description_image_pause">pause</string>
    <string name="description_image_taulell">Table Image</string>
    <string name="friend">FRIEND</string>
    <string name="description_image_green_ball">Green image_ball</string>
    <string name="description_image_grey_ball">Grey Image ball</string>
    <string name="clownfish">CLOWNFISH</string>
    <string name="blowfish">BLOWFISH</string>
    <string name="shark">SHARK</string>
    <string name="swordfish">SWORDFISH</string>
    <string name="select_a_fish">SELECT A FISH</string>
    <string name="level_complete">LEVEL COMPLETE!</string>
    <string name="plancton_collected">PLANCTON COLLECTED:</string>
    <string name="meters_travelled">METERS TRAVELLED:</string>
    <string name="back">BACK</string>
    <string name="next_level">NEXT LEVEL</string>
    <string name="int_plancton_collected">20</string>
    <string name="int_travelled_meters">150 METERS</string>
    <string name="game_over">GAME_OVER</string>
    <string name="retry">RETRY</string>
    <string name="owned">OWNED</string>
    <string name="preu_clownfish">1000</string>
    <string name="preu_blowfish">3500</string>
    <string name="preu_shark">8500</string>
    <string name="preu_swordfish">5000</string>
    <string name="pause">PAUSE</string>
    <string name="restart">RESTART</string>
    <string name="exit">EXIT</string>
    <string name="paused">PAUSED</string>

    <!--Fragment InvitationReceived-->
    <string name="invitationReceived_textViewMsg_invitationReceivedMsg">YOU HAVE RECEIVED AN INVITATION FROM</string>
    <string name="invitationReceived_buttonAccept_acceptMsg">ACCEPT</string>
    <string name="invitationReceived_buttonReject_rejectMsg">REJECT</string>
    <string name="invitationReceived_textView_invitingUserName_placeholder">USERNAME PLACEHOLDER</string>

    <!--Fragment InGamePause-->
    <string name="inGamePause_textView_pauseMsg">PAUSE</string>
    <string name="inGamePause_continueButton_continueMsg">CONTINUE</string>
    <string name="successful">SUCCESSFUL</string>
    <string name="gameOver">GAME OVER</string>
    <string name="Receive_invitation">RECEIVE INVITATION</string>


    <!--
    <string name="default_web_client_id">TODO_REPLACE</string>
    -->

    <string name="actual_plankton">Actual Plankton</string>
    <string name="welcome">WELCOME TO RUNFISH!</string>
    <string name="username_petition">HEY, TO CONTINUE USING RUNFISH YOU WILL NEED TO CREATE YOUR USERNAME:</string>
    <string name="blowFish">BLOW SHARK</string>
    <string name="swordFish">SWORD FISH</string>
    <string name="whiteShark">WHITE SHARK</string>
    <string name="clownFish">CLOWNFISH</string>
    <string name="commonFish">COMMON FISH</string>
    <string name="loadingData">LOADING DATA...</string>
    <string name="num_Level">LEVEL 1</string>
    <string name="levelMeters">METERS: 1000 M</string>
    <string name="yourFish">YOUR FISH:</string>
    <string name="maxDistance">MAX DISTANCE: 0</string>
    <string name="maxScore">MAX SCORE: 0</string>
    <string name="ranking">RANKING</string>
    <string name="tutorial_description">1. SELECT YOUR FAVOURITE CHARACTER\n\n
        2. SELECT A LEVEL \n\n
        3. MOVE YOUR CHARACTER WITH THE JOYSTICK BELOW\n\n
        4. TRY TO AVOID THE ENEMYS AND \nCOLLECT THE PLANKTON!
    </string>
    <string name="freemodeDescription">
        ON THIS GAME MODE, IF YOUR PLANKTON QUANTITY IS A PRIME NUMBER YOU WILL HAVE AN ADVANTAGE: THE PLANKTON YOU GET DURING THE NEXT THREE SECONDS WILL MULTIPLY BY A NUMBER.
        YOU WILL EARN MORE PLANKTON IN A SHORTER AMOUNT OF TIME! MEMORISE THE PRIME NUMBERS TO GET MORE POINTS EVERY TIME!
    </string>
    <string name="tutorial_plancton_description">CATCH ALL THE PLANKTON YOU CAN! \nTHEN IT WILL BE USED TO BUY BETTER CHARACTERS \nAND HAVE MORE BOOSTERS \n\n
        BESIDES, IN THE FREE MODE, IF YOUR AMOUNT OF \nPLANKTON IS A PRIME NUMBER, YOU WILL HAVE MORE AVANTAGE</string>

</resources>
