<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">



    <android.support.constraint.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activityFragments.MainActivity">
        <TextView
                android:text="@string/run"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_run"
                android:textSize="54sp"
                android:fontFamily="@font/freescpt"
                android:textColor="@color/colorTitol"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/image_nemo"
                app:layout_constraintHorizontal_bias="0.878"
                android:layout_marginTop="44dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/text_username" style="@style/MistralStyle"
                android:hint="@string/username"
                android:background="@drawable/new_tablon"
                android:textAlignment="center"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/image_nemo"
                app:layout_constraintHorizontal_bias="0.501"/>
        <Button
                android:text="@string/enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_enter"
                android:background="@drawable/fusta_animation"
                style="@style/MistralStyle"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/text_password"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/signInGoogleButton"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.448"/>
        <TextView
                android:text="@string/fish"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_fish"
                android:textSize="54sp"
                android:fontFamily="@font/freescpt"
                android:textColor="@color/colorTitol"
                android:textStyle="bold"
                android:layout_marginStart="36dp"
                app:layout_constraintStart_toStartOf="@+id/image_nemo"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.026"
                android:layout_marginTop="44dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/text_password" style="@style/MistralStyle"
                android:hint="@string/password"
                android:background="@drawable/new_tablon_izq"
                android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintTop_toBottomOf="@+id/text_username"
                android:layout_marginTop="36dp"
                android:inputType="textPassword"
                android:importantForAutofill="no"/>
        <ImageView
                android:src="@drawable/corda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:contentDescription="@string/corda2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/text_username" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/text_password"
                app:layout_constraintStart_toEndOf="@+id/imageView4" android:layout_marginStart="172dp"
        />
        <ImageView
                android:src="@drawable/corda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:contentDescription="@string/corda1"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/text_username" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/text_password" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.382"
                app:layout_constraintVertical_bias="0.555"/>
        <ImageView
                android:src="@drawable/anemone"
                android:layout_width="64dp"
                android:layout_height="52dp"
                android:id="@+id/image_nemo"
                android:contentDescription="@string/todo"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.499"
                android:layout_marginTop="52dp"
                app:layout_constraintTop_toTopOf="parent"/>


        <com.google.android.gms.common.SignInButton android:layout_width="160dp"
                                                    android:layout_height="55dp"
                                                    android:layout_marginBottom="8dp"
                                                    app:layout_constraintBottom_toBottomOf="parent"
                                                    app:layout_constraintStart_toStartOf="parent"
                                                    android:layout_marginStart="8dp"
                                                    app:layout_constraintEnd_toEndOf="parent"
                                                    android:layout_marginEnd="8dp"
                                                    app:layout_constraintHorizontal_bias="0.21"
                                                    android:id="@+id/signInGoogleButton" android:layout_marginTop="8dp"
                                                    app:layout_constraintTop_toBottomOf="@+id/text_password"
                                                    app:layout_constraintVertical_bias="0.113"></com.google.android.gms.common.SignInButton>


    </android.support.constraint.ConstraintLayout>


</layout>