<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".fragmentsAndActivites.SignInFragment" android:background="@drawable/fons">
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_comeback"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/flecha_animation_izq"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="485dp"
            android:layout_height="347dp" android:id="@+id/tablon_signIn"
            android:background="@drawable/tablon_grande"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/text_username_singIn" android:textColorLink="@color/colorMistral"
                android:textColorHint="@android:color/darker_gray"
                android:background="@android:color/background_light" android:hint="@string/username_text"
                android:textColor="@color/colorMistral"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView_avatar"
                app:layout_constraintEnd_toEndOf="@+id/imageView_avatar"
                app:layout_constraintStart_toStartOf="@+id/imageView_avatar"/>
        <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/text_email_singIn" android:hint="@string/email_text"
                android:textColorLink="@color/colorMistral" android:textColorHint="@android:color/darker_gray"
                android:background="@android:color/background_light"
                app:layout_constraintTop_toBottomOf="@+id/text_username_singIn"
                app:layout_constraintEnd_toEndOf="@+id/text_username_singIn"
                app:layout_constraintStart_toStartOf="@+id/text_username_singIn" android:textColor="@color/colorMistral"/>
        <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/text_password_singIn" android:background="@android:color/background_light"
                android:hint="@string/password_value" android:textColorLink="@color/colorMistral"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/text_email_singIn"
                app:layout_constraintEnd_toEndOf="@+id/text_email_singIn"
                app:layout_constraintStart_toStartOf="@+id/text_email_singIn" app:layout_constraintHorizontal_bias="1.0"
                android:textColor="@color/colorMistral"/>
        <Button
                android:text="@string/sign_in"
                android:layout_width="247dp"
                android:layout_height="41dp"
                android:id="@+id/button_sign_in"
                android:background="@color/colorBarraSlide2" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/text_password_singIn"
                app:layout_constraintEnd_toEndOf="@+id/text_password_singIn"
                app:layout_constraintStart_toStartOf="@+id/text_password_singIn"
                android:contentDescription="@string/descriptor_button_singIn"/>
        <ImageView
                android:src="@drawable/avatar_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView_avatar"
                app:layout_constraintTop_toBottomOf="@+id/imageView_google"
                android:layout_marginTop="4dp" app:layout_constraintEnd_toEndOf="@+id/imageView_google"
                app:layout_constraintStart_toStartOf="@+id/imageView_google"
                android:contentDescription="@string/description_user_image"/>
        <ImageView
                android:src="@drawable/google"
                android:layout_width="191dp"
                android:layout_height="46dp"
                android:id="@+id/imageView_google" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.192"
                android:contentDescription="@string/description_image_google"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>


