<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".PauseFragment" android:id="@+id/constraintLayout">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="90dp"
            android:layout_marginTop="70dp" android:layout_marginEnd="90dp" android:layout_marginBottom="70dp"
            android:background="@drawable/tablon_grande" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0">

        <TextView
                android:text="@string/paused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView_pause"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/MistralStyle"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                android:background="@drawable/tablon" android:paddingTop="20dp" android:textAlignment="center"
                android:layout_marginStart="8dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_resume"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                android:text="@string/resume" style="@style/MistralStyle" android:background="@drawable/fusta_animation"
                app:layout_constraintTop_toBottomOf="@+id/textView_pause"
                app:layout_constraintVertical_bias="0.0" android:layout_marginTop="5dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_restart"
                app:layout_constraintEnd_toEndOf="@+id/button_resume"
                app:layout_constraintStart_toStartOf="@+id/button_resume" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/button_resume" app:layout_constraintVertical_bias="0.0"
                android:text="@string/restart" android:background="@drawable/fusta_animation"
                style="@style/MistralStyle"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/button_exit" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/button_restart"
                app:layout_constraintEnd_toEndOf="@+id/button_restart"
                app:layout_constraintStart_toStartOf="@+id/button_restart"
                android:background="@drawable/fusta_animation"
                android:text="@string/menu" style="@style/MistralStyle"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>