<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".InvitationReceived">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="410dp"
                android:layout_height="272dp"
                android:background="@drawable/tablon_grande"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="1dp">
            tools:layout_editor_absoluteX="0dp" android:layout_marginTop="164dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="365dp">

            <TextView
                    android:text="@string/invitationReceived_textViewMsg_invitationReceivedMsg"
                    android:layout_width="176dp"
                    android:layout_height="66dp" android:id="@+id/invitationReceived_textView_mensajeUnirte"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.31" style="@style/MistralStyle"/>
            <TextView
                    android:text="@string/invitationReceived_textView_invitingUserName_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/invitationReceived_textView_invitingUserName"
                    app:layout_constraintTop_toBottomOf="@+id/invitationReceived_textView_mensajeUnirte"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    style="@style/MistralStyle"/>
            <Button
                    android:text="@string/invitationReceived_buttonAccept_acceptMsg"
                    android:background="@drawable/fusta_animation" style="@style/MistralStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/invitationReceived_button_aceptar"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="76dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/invitationReceived_textView_invitingUserName"/>
            <Button
                    android:text="@string/invitationReceived_buttonReject_rejectMsg"
                    android:background="@drawable/fusta_animation" style="@style/MistralStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/invitationReceived_button_rechazar"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="76dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/invitationReceived_textView_invitingUserName"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>